2011-02-17 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Fix a missed translatable string.

2011-02-16 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget_php: Refactor into a class.
		Add rudiments of I18N support.

2011-02-15 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 2.0.3

2011-02-15 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Refactor to enable standalone function.
		Implement standalone function usable in non-widgetized themes.
		Add options page to enable standalone function.
	* readme.txt: Update stable version, description, installation, history.

2011-02-14 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Change comment style to match other plugin.

2011-02-10 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Fixed typo in uninstall function.

2011-02-10 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Use WP_PLUGIN_URL constant to build
		the script URL instead of determining it ourselves. The 
		old way was only required for old versions of WordPress.

2011-02-09 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 2.0.1

2011-02-05 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Add nonce field to settings form,
		nonce check when form submitted.

2011-01-24 Heath Harrelson <heath.harrelson@gmail.com>
	* readme.txt: Improve wording.

2011-01-23 Heath Harrelson <heath.harrelson@gmail.com>
	Tag version 2.0.0

2011-01-23 Heath Harrelson <heath.harrelson@gmail.com>
	* flexo_archives_widget.php: Refactor to not use nested functions.
		Remove support for ancient versions of WordPress.
		Add option to animate list expansion using jQuery.
		Increase version number.
	* flexo.js: Rewrite to use jQuery.
	* flexo-anim.js: Added. JavaScript for animated list expansion.
	* readme.txt: Update latest WordPress tested.
		Update stable version, description, installation, history.
